--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@
 
 MONGO_URI="mongodb+srv://bookanytimeinfo:1uA08xxMxjBqq8d9@bookanytime.2qu4hvg.mongodb.net/?retryWrites=true&w=majority&appName=BookAnyTime"
 JWT_SECRET = "abcdefghijklmnopqrstuvwxyz"
-node_Backend_URL=http://localhost:3000
+node_Backend_URL= https://bookanytimeserver2-0.onrender.com
